101-kittens-carousel-static-website-ec2/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: This CloudFormation Template was written for
  running Kittens Carousel Static Website on EC2.
  Kittens Carousel Static Website will be
  deployed on Amazon Linux 2
  (ami-0bef6cc322bfff646) EC2 Instance with
  custom security group which allows http
  connections on port 80 and ssh port 22 from
  anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository,
  then deployed on Apache Web Server

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables http for Apache Web Server and ssh for secure connection
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  CFNInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0bef6cc322bfff646
      InstanceType: t2.micro
      KeyName: *** APPROPRIATE .PEM ***
      SecurityGroups:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: Web Server of ${AWS::StackName} Stack
      UserData:
        Fn::Base64: !Sub |
          #! /bin/bash
           yum update -y
           yum install httpd -y
           FOLDER="https://raw.githubusercontent.com/Sipcensky/my_projects/main/101-kittens-carousel-static-website-ec2/static-web"
           cd /var/www/html
           wget $FOLDER/index.html
           wget $FOLDER/cat0.jpg
           wget $FOLDER/cat1.jpg
           wget $FOLDER/cat2.jpg
           systemctl start httpd
           systemctl enable httpd

Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt CFNInstance.PublicDnsName
    Description: Kittens Carousel Application URL
